# bookcol-cli

./: README.md
book_collection/: README.md  main.py  pyproject.toml  setup.py
book_collection/book_collection/: commands.py
bookcol/: pyproject.toml  setup.py
bookcol/bookcol/: __main__.py  commands.py  db.py
warehouse/: input_validator.py  inputvalidator.py  inventory.py  inventory_manager.py  item.py  main.py  main_test.py  product.py  sqlite_manager.py  teste.py  testes.py  to-dos.txt
