[tool.poetry]
name = "bookcol"
version = "0.1.0"
description = "CLI app for managing a book collection"
authors = ["Nicolau Polonio <nicolau.polonio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.0"
inquirer = "^2.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bookcol = 'bookcol.__main__:cli'
